# sigpyproc3

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  HISTORY.rst  LICENSE  README.md  codecov.yml  environment_doc.yml  pyproject.toml  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: ci.yml  python-package.yml
c_src/: #SigPyProcSpec.c#  .#SigPyProcSpec.c  .clang-format  Makefile  MersenneTwister.c  MersenneTwister.cpp  SigPyProc32.c  SigPyProc8.c  SigPyProcSpec.c  SigPyProcTim.c  bindings.cpp  data_unpack.hpp  fourierseries.hpp  kernels.hpp  libSigPyProc.c  libSigPyProc.cpp  libSigPyProc32.c  libSigPyProc8.c  libSigPyProcSpec.c  libSigPyProcSpec.cpp  libSigPyProcTim.cpp  libUtils.hpp  timeseries.hpp  utils.hpp
docs/: _autosummary_trigger.md  changes.md  changes.rst  cmd.md  cmd.rst  conf.py  dev.md  dev.rst  index.md  index.rst  install.md  install.rst  modules.md  modules.rst  requirements.txt  sigpyproc.rst
docs/_templates/autosummary/: class.rst  data.rst  module.rst  top_module.rst
docs/api/: base.md  base.rst  block.md  block.rst  core.md  core.rst  foldedcube.md  foldedcube.rst  fourierseries.md  fourierseries.rst  header.md  header.rst  index.md  io.md  io.rst  libcpp.rst  params.md  params.rst  readers.md  readers.rst  sigpyproc.Filterbank.rst  sigpyproc.FoldedData.rst  sigpyproc.FourierSeries.rst  sigpyproc.Header.rst  sigpyproc.HeaderParams.rst  sigpyproc.Readers.rst  sigpyproc.TimeSeries.rst  sigpyproc.Utils.rst  sigpyproc.libSigPyProc.rst  timeseries.md  timeseries.rst  utils.md  utils.rst
docs/tutorials/: quickstart.ipynb
examples/: dedisperse.py  get_bandpass.py  quickstart.ipynb
sigpyproc/: Filterbank.py  FoldedData.py  FourierSeries.py  Header.py  HeaderParams.py  Readers.py  TimeSeries.py  Utils.py  __init__.py  base.py  block.py  core.py  ctype_helper.py  foldedcube.py  fourierseries.py  header.py  kernels.py  params.py  profile.py  readers.py  stats.py  timeseries.py  utils.py
sigpyproc/apps/: spp_clean.py  spp_decimate.py  spp_digifil.py  spp_extract.py  spp_header.py
sigpyproc/core/: custom_types.py  filters.py  kernels.py  rfi.py  stats.py  types.py
sigpyproc/cpp/: bindings.cpp  data_unpack.hpp  fourierseries.hpp  kernels.hpp  stats.hpp  timeseries.hpp
sigpyproc/io/: __init__.py  bits.py  fbh5.py  fileio.py  pfits.py  rescale.py  sigproc.py
sigpyproc/simulation/: furby.py
sigpyproc/viz/: styles.py
src/sigpyproc/: __init__.py  base.py  block.py  foldedcube.py  fourierseries.py  header.py  params.py  readers.py  timeseries.py  utils.py
src/sigpyproc/apps/: spp_clean.py
src/sigpyproc/core/: custom_types.py  filters.py  kernels.py  rfi.py  stats.py
src/sigpyproc/io/: bits.py  fbh5.py  fileio.py  pfits.py  rescale.py  sigproc.py
src/sigpyproc/simulation/: furby.py
src/sigpyproc/viz/: styles.py
tests/: __init__.py  conftest.py  test_apps.py  test_base.py  test_bits.py  test_blocks.py  test_fileio.py  test_filterbank.py  test_filters.py  test_foldedcube.py  test_fourierseries.py  test_furby.py  test_header.py  test_kernels.py  test_libcpp.py  test_libsigpyproc.py  test_params.py  test_pfits.py  test_profile.py  test_readers.py  test_rfi.py  test_sigproc.py  test_stats.py  test_styles.py  test_timeseries.py  test_utils.py
tests/data/: GBT_J1807-0847.fft  GBT_J1807-0847.inf  GBT_J1807-0847.tim  Lband_DM0.00.fft  Lband_DM0.00.inf  Lband_DM0.00.tim  parkes_1bit.fil  parkes_2bit.fil  parkes_4bit.fil  parkes_4bit.sf  parkes_8bit_1.fil  parkes_8bit_1_mask.h5  parkes_8bit_2.fil
