[project]
name = "sigpyproc"
version = "1.2.0"
description = "Python FRB/pulsar data toolbox"
readme = "README.md"
authors = [{ name = "Ewan Barr", email = "ewan.d.barr@gmail.com" }]
maintainers = [{ name = "Pravir Kumar", email = "pravirka@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=2.0",
    "numba",
    "astropy",
    "matplotlib",
    "seaborn",
    "h5py",
    "bottleneck",
    "attrs",
    "click",
    "rich",
    "rich-click",
    "rocket-fft",
    "bidict",
    "typing_extensions",
]

[project.urls]
Repository = "https://github.com/FRBs/sigpyproc3"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-benchmark",
    "pytest-mock",
    "mypy",
    "scipy",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-prompt",
    "sphinx-copybutton",
    "numpydoc",
    "myst-nb",
    "jupyter_sphinx",
]
develop = ["ruff"]

[project.scripts]
spp_header = "sigpyproc.apps.spp_header:main"
spp_extract = "sigpyproc.apps.spp_extract:main"
spp_clean = "sigpyproc.apps.spp_clean:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
include = [
    "pyproject.toml",
    "sigpyproc/**/*.py",
    "tests/**/*.py",
    "docs/**/*.py",
]

exclude = ["sigpyproc/apps/spp_digifil.py"]

line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D1", "D301", "PLR2004", "G004"]

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT", "PLR2004", "PT011", "SLF001"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = "tests"

[tool.coverage.paths]
source = ["./sigpyproc/"]

[tool.coverage.run]
omit = ["tests/*", "docs/*", "*__init__.py", "*_types.py"]

[tool.coverage.report]
show_missing = true
#fail_under = 85
ignore_errors = true
exclude_lines = [
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'except ModuleNotFoundError:',
    'if __name__ == "__main__":',
    'if outfile_name is None:',
]

[tool.mypy]
enable_incomplete_feature = ["Unpack"]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.numpydoc_validation]
checks = ["all", "GL01", "GL08", "EX01", "SA01", "ES01", "SS02", "SA04"]
exclude = ['\.undocumented_method$', '\.__repr__$']
