[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "sigpyproc"
version = "2.0.0"
description = "Python FRB/pulsar data toolbox"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pravir Kumar", email = "pravirka@gmail.com" },
    { name = "Ewan Barr" },
]
maintainers = [{ name = "Pravir Kumar", email = "pravirka@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=2.0",
    "numba>=0.61",
    "astropy>=6.0",
    "matplotlib",
    "seaborn",
    "h5py",
    "bottleneck",
    "attrs",
    "click",
    "rich",
    "rich-click",
    "rocket-fft",
    "bidict",
]

[project.urls]
Repository = "https://github.com/FRBs/sigpyproc3"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-benchmark",
    "pytest-mock",
    "scipy>=1.13",
    "ruff",
    "ty",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-copybutton",
    "numpydoc",
    "myst-nb",
    "jupyter_sphinx",
    "sphinx-design",
]

[project.scripts]
spp_header = "sigpyproc.apps.spp_header:main"
spp_extract = "sigpyproc.apps.spp_extract:main"
spp_clean = "sigpyproc.apps.spp_clean:main"


[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "docs/**/*.py"]
exclude = ["src/sigpyproc/apps/spp_digifil.py"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D301", "PLR2004", "G004"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT", "PLR2004", "PT011", "SLF001"]
"docs/**" = ["INP001", "ARG001", "ANN401"]

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]
exclude = ["tests", "src/sigpyproc/apps/spp_digifil.py"]

[tool.ty.rules]
not-iterable = "ignore" # For Numba prange

[[tool.ty.overrides]]
include = ["tests/test_stats.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
omit = ["tests/*", "docs/*", "*__init__.py", "*_types.py"]

[tool.coverage.report]
show_missing = true
#fail_under = 85
ignore_errors = true
exclude_lines = [
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'except ModuleNotFoundError:',
    'if __name__ == "__main__":',
    'if outfile_name is None:',
]

[tool.numpydoc_validation]
checks = ["all", "GL01", "GL08", "EX01", "SA01", "ES01", "SS02", "SA04"]
exclude = ['\.undocumented_method$', '\.__repr__$']
