[metadata]
name = sigpyproc
version = 1.0.0
author = Ewan Barr
author_email = ewan.d.barr@gmail.com
maintainer = Pravir Kumar
maintainer_email = pravirka@gmail.com
url = https://github.com/FRBs/sigpyproc3
description = Python FRB/pulsar data toolbox
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = false
include_package_data = false
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.20
    astropy>=4.0
    rich
    attrs
    bidict
    scipy
    bottleneck
    numba

[options.entry_points]
console_scripts =
    spp_header = sigpyproc.apps.spp_header:main
    spp_decimate = sigpyproc.apps.spp_decimate:main

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-randomly
    pytest-sugar
    pytest-benchmark
docs =
    docutils>=0.17
    myst-parser
    sphinx
    sphinx-book-theme
    pandoc
    ipython
    breathe
    commonmark
    recommonmark
    nbsphinx


[flake8]
ignore =
    # Default ignore
    BLK100,
    # Line break
    W503,
    # Isort
    I,
    # Docs
    D10, D401
    # Trailing commas
    C81,
    # Quotes
    Q0,
    # WPS
    WPS100, WPS110, WPS114
    WPS210, WPS220, WPS237,
    WPS305, WPS323, WPS339, WPS345, WPS352
    WPS432, WPS440, WPS441,
    WPS519,
    WPS602,
    # bandit
    S101, S105, S404, S602, S607,
    # whitespace before colon
    E203
exclude = .git, .eggs, __pycache__, docs/, old/, build/, dist/
i-control-code = False
max-asserts = 10
max-imports = 20
max-methods = 35
max-attributes = 30
max-arguments = 20
max-complexity = 10
max-expressions = 20
max-string-usages = 50
max-cognitive-score = 20
max-line-complexity = 40
max-module-members = 50
max-module-expressions = 20
max-function-expressions = 10
max-local-variables = 10
max-line-length = 127
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,
    # C programming language:
    c:member,
    # Python programming language:
    py:func,py:mod,py:obj


[darglint]
docstring_style=numpy
ignore=DAR402,DAR103,DAR201,DAR101


[tool:pytest]
minversion = 6
testpaths = tests

[coverage:run]
omit =
    *setup.py
	*__init__.py
	*tests*
	*docs*

[coverage:report]
show_missing = True
ignore_errors = True
#fail_under = 85
exclude_lines =
	raise AssertionError
	raise NotImplementedError

[coverage:paths]
source = ./

[mypy]
ignore_missing_imports = True
plugins = numpy.typing.mypy_plugin
